<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neopoly.tictactoe.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <RelativeLayout
            android:id="@+id/new_game"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="432dp"
            android:layout_height="288dp"
            android:background="@color/colorMain"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_flag_x"
                android:text="@string/flag_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-18dp"
                android:translationY="-62dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_versus"
                android:text="@string/txt_versus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-18dp"
                android:translationY="-12dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_flag_o"
                android:text="@string/flag_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-18dp"
                android:translationY="38dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText" />

            <RadioGroup
                android:id="@+id/rg_first"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/tv_first_headline"
                    android:text="@string/txt_headline_first_turn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:paddingBottom="9dp"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/rb_x_first"
                    android:text="@string/rb_x_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:checked="false"
                    android:padding="10dp"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/rb_random_first"
                    android:text="@string/rb_random_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:checked="true"
                    android:padding="10dp"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/rb_o_first"
                    android:text="@string/rb_o_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:checked="false"
                    android:padding="10dp"
                    android:textColor="@color/colorText" />

            </RadioGroup>

            <Button
                android:id="@+id/bt_start"
                android:text="@string/bt_start"
                android:onClick="onButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/rg_first"
                android:layout_alignParentBottom="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <EditText
                android:id="@+id/et_gamer_x"
                android:text="@string/txt_gamer"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-84dp"
                android:translationY="-62dp"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/et_gamer_o"
                android:text="@string/txt_gamer"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-84dp"
                android:translationY="38dp"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/current_game"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="432dp"
            android:layout_height="288dp"
            android:background="@color/colorMain"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_name_gamer_x"
                android:text="@string/txt_gamer"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-88dp"
                android:translationY="-62dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_name_gamer_o"
                android:text="@string/txt_gamer"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-88dp"
                android:translationY="38dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_flag_x_"
                android:text="@string/flag_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-18dp"
                android:translationY="-62dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_versus_"
                android:text="@string/txt_versus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-18dp"
                android:translationY="-12dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_flag_o_"
                android:text="@string/flag_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:translationX="-18dp"
                android:translationY="38dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText" />


            <TextView
                android:id="@+id/tv_score_headline"
                android:text="@string/txt_headline_game_score"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:paddingBottom="12dp"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_wins_x"
                android:text="XX"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_score_headline"
                android:layout_centerVertical="true"
                android:translationY="-62dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_rounds"
                android:text="XO Runden"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_score_headline"
                android:layout_centerVertical="true"
                android:translationY="-12dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/tv_wins_o"
                android:text="OO"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_score_headline"
                android:layout_centerVertical="true"
                android:translationY="38dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/colorText" />

            <Button
                android:id="@+id/bt_continue"
                android:text="@string/bt_continue"
                android:onClick="onButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_score_headline"
                android:layout_alignParentBottom="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <Button
                android:id="@+id/bt_discard"
                android:text="@string/bt_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/tv_versus_"
                android:layout_alignParentBottom="true"
                android:onClick="onButtonClick"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        </RelativeLayout>

    </RelativeLayout>

</merge>
